tests/snapshots/sfc/ts/options_api__data_with_multiple_properties.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: output.as_str()
---
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

function _sfc_render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(_ctx.firstName) + " " + _toDisplayString(_ctx.lastName) + " (" + _toDisplayString(_ctx.count) + ")", 1 /* TEXT */))
}

const _sfc_main = {
  data() {
    return { firstName: 'Ada', lastName: 'Lovelace', count: 0 }
  }
}

_sfc_main.render = _sfc_render
export default _sfc_main
