tests/snapshots/sfc/ts/options_api__define_component_options_api_ts.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: output.as_str()
---

import { defineComponent } from 'vue'

const _sfc_main = defineComponent({
  data() {
    return { count: 0 as number }
  },
  computed: {
    doubled(): number {
      return this.count * 2
    }
  }
})

import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString($options.doubled), 1 /* TEXT */))
}
_sfc_main.render = _sfc_render
export default _sfc_main
