tests/snapshots/sfc/ts/options_api__directive_with_full_hooks.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: output.as_str()
---

const _sfc_main = {
  directives: {
    color: {
      mounted(el, binding) {
        el.style.color = binding.value
      },
      updated(el, binding) {
        el.style.color = binding.value
      }
    }
  },
  data() {
    return { tint: 'red' }
  }
}

import { resolveDirective as _resolveDirective, withDirectives as _withDirectives, openBlock as _openBlock, createElementBlock as _createElementBlock, createTextVNode as _createTextVNode } from "vue"

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  const _directive_color = _resolveDirective("color")
  
  return _withDirectives((_openBlock(), _createElementBlock("p", null, [
    _createTextVNode("text")
  ], 512 /* NEED_PATCH */)), [
    [_directive_color, $data.tint]
  ])
}
_sfc_main.render = _sfc_render
export default _sfc_main
