tests/snapshots/sfc/ts/options_api__emits_object_form_with_validator.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: output.as_str()
---

const _sfc_main = {
  emits: {
    submit: (payload) => typeof payload === 'string',
    cancel: null
  },
  data() {
    return { value: '' }
  }
}

import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("button", {
    onClick: $event => (_ctx.$emit('submit', $data.value))
  }, "go", 8 /* PROPS */, ["onClick"]))
}
_sfc_main.render = _sfc_render
export default _sfc_main
