tests/snapshots/sfc/ts/options_api__emits_with_template_emit.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: output.as_str()
---

const _sfc_main = {
  emits: ['submit', 'cancel'],
  data() {
    return { value: '' }
  }
}

import { withModifiers as _withModifiers, createElementVNode as _createElementVNode, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("form", {
    onSubmit: _withModifiers($event => (_ctx.$emit('submit', $data.value)), ["prevent"])
  }, [
    _createElementVNode("button", {
      type: "button",
      onClick: $event => (_ctx.$emit('cancel'))
    }, "Cancel", 8 /* PROPS */, ["onClick"])
  ], 40 /* PROPS, NEED_HYDRATION */, ["onSubmit"]))
}
_sfc_main.render = _sfc_render
export default _sfc_main
