tests/snapshots/sfc/ts/options_api__expose_option.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: output.as_str()
---
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

function _sfc_render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(_ctx.count), 1 /* TEXT */))
}

const _sfc_main = {
  data() {
    return { count: 0 }
  },
  expose: ['count'],
  methods: {
    reset() {
      this.count = 0
    }
  }
}

_sfc_main.render = _sfc_render
export default _sfc_main
